- MIDI recording fixes on macOS version (aupfred)
- Python 3 fixes (Windows version still uses Python 2.7 though)

1.3.8
- The notes drawn using 'Follow score' where shifted up and left
- The Stop-button had to be used even after the music ended. This was only an issue when playing music using a SoundFont.
- Support for FluidSynth 2.1 in Windows version
- ABC Assist improvements: more help on what to do on an empty line

1.3.8.1
- Added Find in Files (Ctrl-Shift-F) to the Edit Menu
  Search advanced using ABC-fields. For example: search all tunes with Mozart as composer and meter 3/4:
    C:mozart M:3/4
- Added exclusive mode: only one file is allowed
    Exlusive mode is enabled via command line option -exclusive
- ABC assist: Support for %%MIDI gchord

1.3.8.2
- Windows installer upgraded from Python 2 to Python 3
- Python 2 is not supported anymore
- Uninstaller now shows EasyABC logo in 'Change or remove a program'

1.3.8.3
- Startup improved by using a small (and horribly sounding) SoundFont (sound\example.sf2) on startup and switching to the SoundFont in the settings on first play
- Export to wave file. Thanks to FluidSynth exporting to a wave file is now possible. You could if you want convert this manually to an MP3 file using ffmpeg (https://ffmpeg.org/ffmpeg.html)
- MIDI to ABC now uses the midi2abc executable instead of the built-in conversion. This improves the import for multivoice tunes.
- ABC assist: Suggested chords now relative to key from header

1.3.8.4
- New: Export to HTML interactive.
    Exports the tunes using Jef Moine's excellent abc2svg. (thanks go to Seymour Shlien for this idea he already implemented in https://runabc.sourceforge.io/)
- Open most recent file on startup [mist]
- 10% faster syntax highlighting
- Find in files: selecting tune focused wrong tune sometimes
- ABC settings: Added 'Separate defaults per voice' checkbox to Voices tab
- ABC assist supports %%barnumbers (better to use %%measurenb instead)